# steamos-mount

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE.md  README.md  README_zh.md  biome.json  justfile  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.nodebase.json  tsconfig.reactbase.json  tsconfig.uibase.json
.claude/: settings.json
.github/workflows/: build-tauri-app.yml
apps/cli/: Cargo.toml
apps/cli/src/: daemon.rs  main.rs  protocol.rs
apps/decky-plugin/: .gitignore  README.md  README_zh.md  main.py  mise.toml  package.json  plugin.json  pyproject.toml  tsconfig.json  tsconfig.node.json  tsconfig.ui.json
apps/tauri-app/: package.json  tsconfig.json  tsconfig.node.json  tsconfig.ui.json  vite.config.ts
apps/tauri-app/src/: App.tsx  index.css  main.tsx  store.tsx  types.ts
apps/tauri-app/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
apps/tauri-app/src-tauri/capabilities/: default.json
apps/tauri-app/src-tauri/src/: commands.rs  context.rs  lib.rs  main.rs  types.rs
apps/tauri-app/src/components/: DeviceCard.tsx  device-card.tsx  global-alert-dialog.tsx  mount-dialog.tsx  providers.tsx  settings-dialog.tsx
apps/tauri-app/src/components/ui/: badge.tsx  card.tsx
apps/tauri-app/src/hooks/: use-confirm.tsx  use-devices.ts
apps/tauri-app/src/lib/: atoms.ts  utils.ts
apps/tui-app/: Cargo.toml
docs/: SOFTWARE_DESIGN.md  SOFTWARE_DESIGN_zh.md  TECH_SPEC.md  TECH_SPEC_zh.md
examples/: fstab  libraryfolders.vdf
scripts/: tsconfig.json  version-manage.ts
