[workspace]
members = [
    "packages/core",            # Core library
    "apps/tui-app",             # TUI application
    "apps/tauri-app/src-tauri", # Tauri backend
    "apps/cli",                 # CLI application
]
resolver = "2"

[workspace.dependencies]
snafu = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
