[package]
name = "steamos-mount-tauri"
version = "0.1.2"
description = "A Tauri App for managing NTFS/exFAT drive mounts on SteamOS."
authors = ["Aitiotekt <root@aitiotekt.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "steamos_mount_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
steamos-mount-core = { path = "../../../packages/core" }
tauri-plugin-store = "2.4.2"
tauri-plugin-dialog = "2.5.0"
